# weather-bot

./: .gitignore  Cargo.toml  README.md  config.toml.example
src/: main.rs
