[package]
name = "weather-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
irc = "0.15.0"
openweathermap = "0.2.4"
regex = "1.5.6"
sqlite = "0.26.0"